--- a/Rishabh_Adversarial_Attacks.ipynb
+++ b/Rishabh_Adversarial_Attacks.ipynb
@@ -2,7 +2,19 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rishabhshah13/Adversarial_Patch_XAI590/blob/main/Rishabh_Adversarial_Attacks.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hD0C9mL-w_GB"
+      },
       "source": [
         "# AIPI 590 - XAI | Assignment #00\n",
         "### Description\n",
@@ -17,8 +29,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "NHRyDHj8w_GE",
+        "outputId": "9b1d926b-b2ee-423c-bdc6-8652a29873b2"
+      },
       "outputs": [
         {
           "name": "stderr",
@@ -92,8 +107,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "blrkqnPcw_GF"
+      },
       "outputs": [],
       "source": [
         "# !pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121"
@@ -101,8 +118,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "AqqgJDx9w_GF"
+      },
       "outputs": [],
       "source": [
         "# !pip install torch numpy scipy torch torchvision seaborn matplotlib tqdm ipywidgets tabulate"
@@ -110,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "zULs-2HiTZvI"
       },
@@ -231,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "dIT2KAPwTZvJ"
       },
@@ -250,13 +269,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1oKKGMFbTZvJ",
-        "outputId": "79ab05b6-7d0c-4979-9903-53a4e3213945"
+        "id": "1oKKGMFbTZvJ"
       },
       "outputs": [],
       "source": [
@@ -288,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "OkGjOa_KTZvJ"
       },
@@ -315,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -331,7 +346,8 @@
             "af63521c4e8e4150bf41ddc4010e542e",
             "a7ace27aa81647fca3e95a0e75d88f3f",
             "37b16b7844c94cba8d8c7707ccb2e22d",
-            "45badcfbd6124284a24e9e5a6ab90e67"
+            "45badcfbd6124284a24e9e5a6ab90e67",
+            "73038fc803e6456b9734d6024a533782"
           ]
         },
         "id": "DG98v89nTZvJ",
@@ -367,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "96LTrHotTZvJ"
       },
@@ -427,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4525,7 +4541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "BANPb44LTZvK"
       },
@@ -4578,7 +4594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "ZGHOD3WLTZvK"
       },
@@ -4593,7 +4609,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "tPN1PAMCTZvK"
       },
@@ -4622,7 +4638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "yYGOtEDHTZvL"
       },
@@ -4666,7 +4682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "oK4f4uZETZvL"
       },
@@ -4691,7 +4707,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "hNwvpD71TZvM"
       },
@@ -4731,7 +4747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5099,7 +5115,70 @@
             "baa0c5133a4740b99d958a9848827039",
             "9d8162c12fbf484095f86b85eb7eb043",
             "ff7aee191a474fe2a8403a889854d27b",
-            "e2864a9c358c4b5d92b9d32df03849e3"
+            "e2864a9c358c4b5d92b9d32df03849e3",
+            "745012db96344c2786ded8e4a6935a32",
+            "97f2aa4679d845eb9e9397abd67ea52c",
+            "45b3d70c7ac241afbd0e3bc8d05fa350",
+            "e806451c499c442684980230bad005b5",
+            "4220f992126147ffbcf1bf4f49bcbe96",
+            "608949af93ec4993a96fb06921369ad5",
+            "4485a70ee49143eba5538db8e3ff7d17",
+            "d7bb4b80b70f42f0a0b8b65dd358e4f5",
+            "5f0cf3a7d37b4fe6a5397a5c799cdc72",
+            "284004b1536f45799e47258f37e38c3f",
+            "0daf0397a7174e1e96b610bda2942b15",
+            "d66730b251104eff90e10f495aea558a",
+            "75c9374bbf654597ab357789aa330229",
+            "89e5a0b0bb29468c91c2669be08ae55a",
+            "db3a22e4859d46bdb4f1a88aebaa38a2",
+            "ffaecd9a51b348cf9f4eef86a695231b",
+            "7c9993de98ac451c84d976c8d0de8cae",
+            "df38cd28a0274e4f9bbfc0417b6ff9ea",
+            "bd89b521a98c48ada53e745a1597fdac",
+            "133499105f5c439a8ab6a6f518826cd7",
+            "90265dc503e44a48bab3e350a6677c4c",
+            "b845d3a2b4704f0ab8493fc819124bde",
+            "8b855ccd9f1d49b5aaadd090cfef5250",
+            "23259152739d47948388f89e920c780a",
+            "12f45c1a7573418ea4139c93a43dba36",
+            "5a2dfaf456fe465896c0ce01779b0fca",
+            "af3b2f474b914115ac55f5c3dbeba6cf",
+            "22bdb793efdf46628aa71f97912a38b8",
+            "89d0a969841a4bbbbd10e584947b0b2d",
+            "c594c471fe294ed9b4dc60591e8446e6",
+            "a9854b3018a548b185e60c707c342924",
+            "1702d4c13de3403a91b7b073d5957cc7",
+            "79d875edf3d14744a6bb0255feae2ced",
+            "f88d2bccf43b48b7b51aa8f30e25d8ca",
+            "81b881fb1c0c43d1b952aa435250c1c0",
+            "2bc9505db3b34d62a55fbce08ce56d9a",
+            "012eca93eb154f30b8dfbbb31dc47b6b",
+            "f28f2cf51b9a4804acc76ea525c8fecb",
+            "ac6b9c34c34e4e25882aaa19890c7f97",
+            "ea237d2a638b4f7c8021cea089c9d724",
+            "8faaa71975704959bbc738a12b0b2b67",
+            "c89373adc8cc4a08b044fe9e54f7771b",
+            "37b261055bf64ace867e62490463373f",
+            "042ad8544c5b413a9bf1219153480741",
+            "95deede88702474aaf2e3489b6bda84d",
+            "d414b3a1d5ed460383597896ef0b0c82",
+            "4c5209575ce84c09b3c30796fe377edc",
+            "4d8c93d6a50f41a2ad0dc594e67cbf62",
+            "1dadfc31e1ff423eb6b991117ca18160",
+            "79f2788a738b442d90d791cc8440d25b",
+            "308a06922b1c4c67a0ff9521570742be",
+            "e9d14d6d01674d81aa46481721d22e43",
+            "3d74f65892eb42b1a7c4c492adc2df87",
+            "2dce47ff0aeb4dda9b473abb380fa387",
+            "dfd952259a1e4b04aaa0cb3a8de88001",
+            "5652377e657a46a8b44359d5fa361294",
+            "7c22f24c93f842a5b18863a9d8cc3e8e",
+            "851b9f733e384dc59b50d09b34fb24c6",
+            "687bdea40e5242288923bbe95b40a76b",
+            "ab0eac6b7f924c819ece853996c0937a",
+            "b71faea12ee2458bb861e7b029fefa93",
+            "fce38cc129784af098c6e0f5b67db1cf",
+            "22aaeb4e3eb643888536b86b2c5e61ba"
           ]
         },
         "id": "oqGhJU-8TZvM",
@@ -6072,7 +6151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -6978,7 +7057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "ix__XYJ2UjO3"
       },
@@ -6989,7 +7068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7027,7 +7106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "8erQrAs1TZvT"
       },
@@ -7045,7 +7124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7083,7 +7162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7121,7 +7200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "2Gk5aODhUzGy"
       },
@@ -7132,7 +7211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "Vl5nvahGTZvT"
       },
@@ -7149,7 +7228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "uOwYNtaaU5Kv"
       },
@@ -7167,7 +7246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -11121,9 +11200,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
-        "id": "0V7lYLo3WMbH"
+        "id": "0V7lYLo3WMbH",
+        "outputId": "184d12f4-35f5-44cb-8275-86223b594393"
       },
       "outputs": [
         {
@@ -15120,7 +15200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "C5xZarKXWFQ3"
       },
@@ -15131,7 +15211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "8W_1tPVaV8AW"
       },
@@ -15142,7 +15222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "NmsaaeddTZvU"
       },
@@ -15153,9 +15233,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
-        "id": "VLFdByFwTZvV"
+        "id": "VLFdByFwTZvV",
+        "outputId": "1df61a75-1e22-4137-e9ec-4f58cf8a1b49"
       },
       "outputs": [
         {
@@ -19314,7 +19395,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "ko5UUw96w_GL"
+      },
       "source": [
         "# Reference:\n",
         "\n",
@@ -19328,7 +19411,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
