--- a/Assignment 10/Assignment 10.ipynb
+++ b/Assignment 10/Assignment 10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmGqgS37HJVCON53jEzx5K",
+      "authorship_tag": "ABX9TyNSE0G5z7BSMxbsBew6YS7e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,6 +274,67 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "### **Original Image**\n",
+        "- This is the input image given to the deep learning model.\n",
+        "- The model predicts that the object in the image is a **Labrador retriever** (class 208 in ImageNet).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Grad-CAM**\n",
+        "- **What it is**: Grad-CAM highlights regions in the image that the model uses to make its decision.\n",
+        "- **Interpretation**: In this example, the heatmap (red regions) shows that the model focuses on the **dog's head and body**, as these areas are most relevant to identifying it as a Labrador retriever.\n",
+        "- **Use Case**: This helps us confirm whether the model is focusing on meaningful features (like the dog) or irrelevant ones (like the background).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Guided Backpropagation**\n",
+        "- **What it is**: Guided Backpropagation visualizes the gradient flow from the model’s output back to the input image.\n",
+        "- **Interpretation**: It highlights fine-grained details (edges and textures) in the image that contribute to the model's prediction.\n",
+        "- **What you see**: The visualization focuses on detailed features like the dog's face and outlines of its body.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Guided Grad-CAM**\n",
+        "- **What it is**: A combination of Grad-CAM and Guided Backpropagation.\n",
+        "- **Interpretation**: This combines the broader focus of Grad-CAM (regions of interest) with the fine-grained details from Guided Backpropagation.\n",
+        "- **What you see**: Highlights are focused on the dog's face and body, with additional details enhancing the explanation.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **SmoothGradCAM++**\n",
+        "- **What it is**: An enhanced version of Grad-CAM that smoothens the heatmap by averaging multiple noisy maps.\n",
+        "- **Interpretation**: The heatmap is more focused and refined compared to the basic Grad-CAM, with clear emphasis on the dog's **head and upper body**.\n",
+        "- **What you see**: The smooth overlay highlights the key regions the model considers most important.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Why is this important?**\n",
+        "These visualizations allow us to:\n",
+        "1. **Understand Model Decisions**: See if the model is focusing on the right areas for its predictions.\n",
+        "2. **Debug the Model**: Identify when a model relies on irrelevant features (like the background).\n",
+        "3. **Build Trust**: Explain the model's behavior to non-technical stakeholders, increasing confidence in AI systems."
+      ],
+      "metadata": {
+        "id": "TH0ASbKdLghc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# References\n",
+        "\n",
+        "- torchcam\n",
+        "- grad-cam\n",
+        "- ChatGPT"
+      ],
+      "metadata": {
+        "id": "NkY0BUcjMDwl"
+      }
     }
   ]
 }
